Open–closed principle

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solid Pattern</title>
    
-    <script src="./dist/SolidRules.js" defer></script>
+    <script src="./dist/main.js" defer></script>
 </head>
 <body>
   
+
 </body>
 </html>
