Added Solid Definition

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./dist/SolidRules.js" defer></script>
 </head>
 <body>
+    <h2>Solid Priciples - Typescript</h2><br><br>
     The SOLID ideas are <br><br>
 
     1. The Single-responsibility principle: "There should never be more than one reason for a class to change. " In other words, every class should have only one responsibility.<br><br>
